--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,14 +6,21 @@ authors = []
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.7.3"
+python = "^3.9.5"
 nonebot2 = "^2.0.0-beta.1"
+nonebot-adapter-onebot = "^2.0.0-beta.1"
+nonebot-plugin-gocqhttp = "^0.4.6"
+
+emoji = "^1.7.0"
+aiohttp = "^3.8.1"
 
 [tool.poetry.dev-dependencies]
 nb-cli = "^0.6.0"
 
 [tool.nonebot]
-plugins = []
+plugins = [
+    "nonebot_plugin_gocqhttp",
+]
 plugin_dirs = ["src/plugins"]
 
 [build-system]
