--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ nonebot-plugin-gocqhttp = "^0.4.6"
 
 emoji = "^1.7.0"
 aiohttp = "^3.8.1"
+mcstatus = "^9.2.0"
+aio-mc-rcon = "^3.1.1"
 
 [tool.poetry.dev-dependencies]
 nb-cli = "^0.6.0"
@@ -20,6 +22,8 @@ nb-cli = "^0.6.0"
 [tool.nonebot]
 plugins = [
     "nonebot_plugin_gocqhttp",
+    "nonebot_plugin_apscheduler",
+    "nonebot_plugin_help"
 ]
 plugin_dirs = ["src/plugins"]
 
