--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,12 +10,14 @@ python = "^3.9.5"
 nonebot2 = "^2.0.0-beta.1"
 nonebot-adapter-onebot = "^2.0.0-beta.1"
 nonebot-plugin-gocqhttp = "^0.4.6"
-nonebot_plugin_help = "^0.3.1"
+
 
 emoji = "^1.7.0"
 aiohttp = "^3.8.1"
 mcstatus = "^9.2.0"
 aio-mc-rcon = "^3.1.1"
+nonebot-plugin-help = "^0.3.1"
+nonebot-plugin-apscheduler = "^0.1.3"
 
 [tool.poetry.dev-dependencies]
 nb-cli = "^0.6.0"
